--- a/src/app/modules/elements/footer/Footer.component.html
+++ b/src/app/modules/elements/footer/Footer.component.html
@@ -1,3 +1,12 @@
 <div class="footer">
-  <h1>This is footer</h1>
+  <pre style="color:grey; text-align: left; font-size:150%; ">
+    <img src="assets/amimaLogo.jpeg" alt="Amima" width="100" height="100" > <b style = "color:black;">Amima</b>     ><a href="https://www.w3schools.com" style="text-decoration:none; color:black;">Product Review</a>      ><a href="https://www.w3schools.com" style="text-decoration:none; color:black;">Help Center</a>      ><a href="https://www.w3schools.com" style="text-decoration:none; color:black;">Contact</a> 
+  </pre>
+
+  <hr>
+  <br>
+  <p style="color:grey;">
+    © 2022 Amima All Rights Reserved
+  </p>
+  <br>
 </div>
