--- a/src/app/modules/elements/image_uploader/ImageUploader.component.html
+++ b/src/app/modules/elements/image_uploader/ImageUploader.component.html
@@ -1,3 +1,7 @@
 <div>
   <h3>Main content</h3>
+  <form action="/action_page.php">
+    <input type="file" id="myFile" name="filename">
+    <input type="submit">
+  </form>
 </div>
