--- a/src/app/modules/elements/footer/Footer.component.html
+++ b/src/app/modules/elements/footer/Footer.component.html
@@ -1,12 +1,10 @@
 <div class="footer">
-  <pre style="color:grey; text-align: left; font-size:150%; ">
-    <img src="assets/amimaLogo.jpeg" alt="Amima" width="100" height="100" > <b style = "color:black;">Amima</b>     ><a href="https://www.w3schools.com" style="text-decoration:none; color:black;">Product Review</a>      ><a href="https://www.w3schools.com" style="text-decoration:none; color:black;">Help Center</a>      ><a href="https://www.w3schools.com" style="text-decoration:none; color:black;">Contact</a> 
+  <pre style="color:grey; text-align: left; font-size:150%; height: 45%;">
+    <img src="assets/amimaLogo.jpeg" alt="Amima" width="80" height="80" style="vertical-align: middle;" > <b style = "color:black;" >Amima</b>     ><a href="https://www.w3schools.com" style=" color:black;">Product Review</a>      ><a href="https://www.w3schools.com" style="color:black;">Help Center</a>      ><a href="https://www.w3schools.com" style="color:black;">Contact</a> 
   </pre>
-
   <hr>
-  <br>
-  <p style="color:grey;">
+  <p style="color:#C0C0C0; height: 50%;">
     © 2022 Amima All Rights Reserved
   </p>
-  <br>
+  
 </div>
