--- a/src/app/modules/pages/profile_page/ProfilePage.component.html
+++ b/src/app/modules/pages/profile_page/ProfilePage.component.html
@@ -1,3 +1,169 @@
-<div>
-  <h3>Profile page: {{ id }}</h3>
+<div class="container">
+
+		<div class="profile">
+
+			<div class="profile-image">
+
+				<img src="assets/profile-pic.JPG" alt="Profile Picture">
+
+			</div>
+
+			<div class="profile-user-settings">
+
+				<h1 class="profile-user-name">proyetei_</h1>
+
+				<button class="btn profile-edit-btn">Edit Profile</button>
+
+				<button class="btn profile-settings-btn" aria-label="profile settings"><i class="fas fa-cog" aria-hidden="true"></i></button>
+
+			</div>
+
+			<div class="profile-bio">
+
+				<p><span class="profile-real-name">Proyetei</span> put description here</p>
+
+			</div>
+
+		</div>
+		<!-- End of profile section -->
+
 </div>
+
+  <div class="mytabs">
+    <input type="radio" id="tabfree" name="mytabs" checked="checked">
+    <label for="tabfree">Posts</label>
+
+    <input type="radio" id="tabgold" name="mytabs">
+    <label for="tabgold">Saved</label>
+    
+
+  </div>
+
+	<!-- End of container -->
+  <main>
+
+    <div class="container">
+  
+      <div class="gallery">
+  
+        <div class="gallery-item" tabindex="0">
+  
+          <img src="https://images.unsplash.com/photo-1511765224389-37f0e77cf0eb?w=500&h=500&fit=crop" class="gallery-image" alt="">
+  
+        </div>
+  
+        <div class="gallery-item" tabindex="0">
+  
+          <img src="https://images.unsplash.com/photo-1497445462247-4330a224fdb1?w=500&h=500&fit=crop" class="gallery-image" alt="">
+  
+        </div>
+  
+        <div class="gallery-item" tabindex="0">
+  
+          <img src="https://images.unsplash.com/photo-1426604966848-d7adac402bff?w=500&h=500&fit=crop" class="gallery-image" alt="">
+  
+          <div class="gallery-item-type">
+  
+            <span class="visually-hidden">Gallery</span><i class="fas fa-clone" aria-hidden="true"></i>
+  
+          </div>
+
+  
+        </div>
+  
+        <div class="gallery-item" tabindex="0">
+  
+          <img src="https://images.unsplash.com/photo-1502630859934-b3b41d18206c?w=500&h=500&fit=crop" class="gallery-image" alt="">
+  
+          <div class="gallery-item-type">
+  
+            <span class="visually-hidden">Video</span><i class="fas fa-video" aria-hidden="true"></i>
+  
+          </div>
+  
+        </div>
+  
+        <div class="gallery-item" tabindex="0">
+  
+          <img src="https://images.unsplash.com/photo-1498471731312-b6d2b8280c61?w=500&h=500&fit=crop" class="gallery-image" alt="">
+  
+          <div class="gallery-item-type">
+  
+            <span class="visually-hidden">Gallery</span><i class="fas fa-clone" aria-hidden="true"></i>
+  
+          </div>
+  
+        </div>
+  
+        <div class="gallery-item" tabindex="0">
+  
+          <img src="https://images.unsplash.com/photo-1515023115689-589c33041d3c?w=500&h=500&fit=crop" class="gallery-image" alt="">
+  
+        </div>
+  
+        <div class="gallery-item" tabindex="0">
+  
+          <img src="https://images.unsplash.com/photo-1504214208698-ea1916a2195a?w=500&h=500&fit=crop" class="gallery-image" alt="">
+  
+          <div class="gallery-item-type">
+  
+            <span class="visually-hidden">Gallery</span><i class="fas fa-clone" aria-hidden="true"></i>
+  
+          </div>
+  
+        </div>
+  
+        <div class="gallery-item" tabindex="0">
+  
+          <img src="https://images.unsplash.com/photo-1515814472071-4d632dbc5d4a?w=500&h=500&fit=crop" class="gallery-image" alt="">
+  
+        </div>
+  
+        <div class="gallery-item" tabindex="0">
+  
+          <img src="https://images.unsplash.com/photo-1511407397940-d57f68e81203?w=500&h=500&fit=crop" class="gallery-image" alt="">
+  
+          <div class="gallery-item-type">
+  
+            <span class="visually-hidden">Gallery</span><i class="fas fa-clone" aria-hidden="true"></i>
+  
+          </div>
+  
+  
+        </div>
+  
+        <div class="gallery-item" tabindex="0">
+  
+          <img src="https://images.unsplash.com/photo-1518481612222-68bbe828ecd1?w=500&h=500&fit=crop" class="gallery-image" alt="">
+  
+        </div>
+  
+        <div class="gallery-item" tabindex="0">
+  
+          <img src="https://images.unsplash.com/photo-1505058707965-09a4469a87e4?w=500&h=500&fit=crop" class="gallery-image" alt="">
+  
+  
+        </div>
+  
+        <div class="gallery-item" tabindex="0">
+  
+          <img src="https://images.unsplash.com/photo-1423012373122-fff0a5d28cc9?w=500&h=500&fit=crop" class="gallery-image" alt="">
+  
+          <div class="gallery-item-type">
+  
+            <span class="visually-hidden">Video</span><i class="fas fa-video" aria-hidden="true"></i>
+  
+          </div>
+
+  
+        </div>
+  
+      </div>
+      <!-- End of gallery -->
+  
+      <div class="loader"></div>
+  
+    </div>
+    <!-- End of container -->
+  
+  </main>
