--- a/src/app/modules/elements/card/Card.component.html
+++ b/src/app/modules/elements/card/Card.component.html
@@ -1,3 +1,29 @@
-<div>
-  <h3>Main content</h3>
+<div class="container">
+  <div class="card">
+    <!--image section-->
+    <div class="imgBox">
+      <img src="././././assets/product2.jpg">
+  
+    </div>
+    <!--product info section-->
+    <div class="productInfo"> 
+      <p> 
+      <a href="https://www.quora.com/How-do-you-create-clickable-text">
+      Tiltle - Product - 
+    </a>
+    </p>
+    </div>
+    <!--user Info section-->
+    
+    <div class="userProfileInfo">
+      <!--user profile picture section-->
+    <div class="userProfileIcon">
+      <img src="././././assets/product1.jpg">
+    </div>
+    <!--user profile info section-->
+    <div class="userUserName" title="USER1111111111111111111111111111111111111111111">
+      <a href="https://www.codegrepper.com/code-examples/html/clickable+text+html"> USER1111111111111111111111111111111111111111111</a></div>
+  </div>
+  </div>
+  
 </div>
