Created atuhor card

--- a/src/app/modules/elements/author_card/AuthorCard.component.html
+++ b/src/app/modules/elements/author_card/AuthorCard.component.html
@@ -1,3 +1,21 @@
-<div>
-  <h3>Main content</h3>
-</div>
+
+<div class="author_card">
+  <div class="author" style="position: relative; left: 10px;">
+    <h1> Author </h1>
+  </div>
+  <hr class="line1">
+  <div>
+    <a href="#"> 
+      <div class="img" style="display:inline-block; vertical-align: top; position: relative; left: 10px; width: 250px;">
+        <img src="https://media.istockphoto.com/photos/3d-rendering-of-abstract-futuristic-blue-circuit-board-and-cpu-picture-id1294764355?s=612x612" > 
+      </div>
+      <div class="authorName" style="display: inline-block; position: relative;">
+        <p>Author Name</p> 
+      </div>
+    </a>
+  </div>
+
+</div>  
+
+  
+
