--- a/src/app/modules/pages/404_page/NotFound.component.html
+++ b/src/app/modules/pages/404_page/NotFound.component.html
@@ -1,3 +1,4 @@
 <div>
-  <h3>Page not found</h3>
+  <h4 id ="oops"> Oops... The page you are looking for cannot be found</h4>
+  <img id ="pic" src ="assets\404GIF.gif">
 </div>
