Implemented Header component

--- a/src/app/modules/elements/header/Header.component.html
+++ b/src/app/modules/elements/header/Header.component.html
@@ -1,5 +1,12 @@
 <div class="header">
-  <h1>
-    This is header
-  </h1>
+  <div class="page">
+    <img id="logo" src="assets/icon.png">
+    <input class="buttonStyleBlack searchBar" type="text">
+    <img id="magnifyGlassImg" src="assets/magnifyGlass.png">
+
+    <button class="buttonStyleBlack searchButton" >Search</button>
+    <a href="url" class="linkStyleRed prodRevLink">Product Review</a>
+    <a href="url" class="linkStyleRed aboutUsLink">About Us</a>
+    <img id="userIcon" src="assets/icon.png">
+  </div>
 </div>
