--- a/src/app/modules/elements/footer/Footer.component.html
+++ b/src/app/modules/elements/footer/Footer.component.html
@@ -1,10 +1,14 @@
 <div class="footer">
-  <pre style="color:grey; text-align: left; font-size:150%; height: 45%;">
-    <img src="assets/amimaLogo.jpeg" alt="Amima" width="80" height="80" style="vertical-align: middle;" > <b style = "color:black;" >Amima</b>     ><a href="https://www.w3schools.com" style=" color:black;">Product Review</a>      ><a href="https://www.w3schools.com" style="color:black;">Help Center</a>      ><a href="https://www.w3schools.com" style="color:black;">Contact</a> 
-  </pre>
-  <hr>
-  <p style="color:#C0C0C0; height: 50%;">
-    © 2022 Amima All Rights Reserved
-  </p>
+  
+    <nav id="nav-1">
+      <img src="assets/amimaLogo.jpeg" alt="Amima" width="50" height="50" style="vertical-align: middle;" margin="10px" >
+      <a class="link-1" href="#">Home</a>
+      <a class="link-1" href="#">About</a>
+      <a class="link-1" href="#">Contact</a>
+      <a class="link-1" href="#">Product Review</a>
+      <p style="color:#C0C0C0; height: 50%;">
+        © 2022 Amima All Rights Reserved
+      </p>
+    </nav>
   
 </div>
