--- a/src/app/modules/elements/author_card/AuthorCard.component.html
+++ b/src/app/modules/elements/author_card/AuthorCard.component.html
@@ -1,15 +1,14 @@
-
-<div class="author_card">
-  <div class="author" style="position: relative; left: 10px;">
-    <h1> Author </h1>
+<div class="authorCard">
+  <div class="author">
+    Author 
   </div>
-  <hr class="line1">
-  <div>
+  <div class="line"><hr></div>
+  <div class="authorInfo" >
     <a href="#"> 
-      <div class="img" style="display:inline-block; vertical-align: top; position: relative; left: 10px; width: 250px;">
+      <div class="authorImg">
         <img src="https://media.istockphoto.com/photos/3d-rendering-of-abstract-futuristic-blue-circuit-board-and-cpu-picture-id1294764355?s=612x612" > 
       </div>
-      <div class="authorName" style="display: inline-block; position: relative;">
+      <div class="authorName">
         <p>Author Name</p> 
       </div>
     </a>
@@ -18,4 +17,3 @@
 </div>  
 
   
-
