--- a/src/app/modules/pages/create_post/CreatePost.component.html
+++ b/src/app/modules/pages/create_post/CreatePost.component.html
@@ -1,3 +1,29 @@
-<div>
-  <h3>Main content</h3>
+<div class="page">
+  <h1 class="pageTitle">Create Post</h1>
+
+  <!--Space for image Uploader-->
+  <br><br><br><br><br><br><br><br><br><br>
+  <!--Space for image Uploader-->
+
+  <div>
+    <input maxlength="25" class="revTitleTextBox"  placeholder="Your Title goes here..." >
+  </div>
+
+  <!--Space for image Hash Tags-->
+  <br><br><br><br>
+  <!--Space for image Hash Tags-->
+
+  <h3 class="reviewTitle">Your Review:</h3>
+  
+  <div class="reviewContainer">
+    <div>
+      <textarea class="revDescripTextBox" [(ngModel)]="inputText" maxlength="{{ txtLimit }}" rows="4" placeholder="Your review goes here..."></textarea>
+    </div>
+    <div *ngIf="100 > txtLimit - inputText.length; then charLim"></div>
+    <ng-template #charLim class="charLabel">
+      <label>{{txtLimit - inputText.length}}/{{txtLimit}}</label>
+    </ng-template>
+    <br>
+    <button class="postButton">Post</button>
+  </div>
 </div>
