--- a/src/app/modules/pages/edit_profile/EditProfile.component.html
+++ b/src/app/modules/pages/edit_profile/EditProfile.component.html
@@ -1,14 +1,32 @@
-<div class = "edit-profile">
-    <h1>Edit Profile</h1>
-    
-        <input type="file" id="file" name="image" >
-        <img src="#" width="100%" height="100%">
-        <label for="file">Edit profile picture</label>
+
+<div class="container">
+    <div class="edit-profile">
+        <!--<input type="file" id="file" name="image" -->
+        <img src="#" width="100%" height="100%"> 
+        
+        <div class="image-upload">
+            <input type="file" id="file" name="image" >
+            <label for="file">
+                <img id="camera" src="assets/camera-icon.svg" style="width:35px; height:35px"/>
+            </label>
+            
+        </div>  
+        <!--<div class="google-btn">
+            <div class="google-icon-wrapper">
+              <img class="google-icon" src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg"/>
+            </div>
+        </div>-->
         <input type="text" placeholder="User Name" name="" >
-        <br>
-        <input type="Email" placeholder="Email ID" name="" > <!-- this should be read only-->
-        <br>
+        
+        <input type="email" placeholder="Email ID" name="" > <!-- this should be read only-->
         <input type="text" placeholder="Bio" name="">
-        <button name="done" style="float: right;margin:10px 18.2% 0 0;">Save Changes</button>
+        <div class="info-btn">
+            <img class="info-icon" src="assets/question-mark.png" style="width:25px; height:25px"/>
+        </div>  
+        
+
+        <button name="done" style="float: right;margin:10px 18.2% 0 0;">Save</button>
+    </div>
+
 
 </div>
