--- a/src/app/modules/pages/edit_profile/EditProfile.component.html
+++ b/src/app/modules/pages/edit_profile/EditProfile.component.html
@@ -22,8 +22,10 @@
         <input type="text" placeholder="Bio" name="">
         <div class="info-btn">
             <img class="info-icon" src="assets/question-mark.png" style="width:25px; height:25px"/>
+            <span class="tooltiptext">A brief description of yourself</span>
         </div>  
         
+        <br>
 
         <button name="done" style="float: right;margin:10px 18.2% 0 0;">Save</button>
     </div>
