--- a/src/app/modules/pages/404_page/NotFound.component.css
+++ b/src/app/modules/pages/404_page/NotFound.component.css
@@ -1,6 +1,7 @@
 #oops {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 40px;
+    color: #ef5b1a;
     text-align: center;
 }
 
@@ -10,5 +11,7 @@
     left: 50%;
     -ms-transform: translateX(-50%);
     transform: translateX(-50%);
+    width: 20%;
+    height: auto;
 }
 
