Added more to carousel

--- a/src/app/modules/elements/image_carousel/ImageCarousel.component.html
+++ b/src/app/modules/elements/image_carousel/ImageCarousel.component.html
@@ -1,7 +1,7 @@
 <div class="slideshow-container">
 
-  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-    <div class="carousel-inner" role="listbox">
+  <div id="carouselExampleControls" class="carousel">
+    <div class="carousel-inner">
       <img src="{{ showSlide(slides, i) }}" alt="slide" >
     </div>
   </div>
