--- a/src/app/modules/elements/image_carousel/ImageCarousel.component.css
+++ b/src/app/modules/elements/image_carousel/ImageCarousel.component.css
@@ -2,7 +2,7 @@
 
 /* Slideshow container */
 .slideshow-container {
-  max-width: 1000px;
+  max-width: 100%;
   position: relative;
   margin: auto;
 }
@@ -73,6 +73,20 @@
 
 .active, .dot:hover {
   background-color: salmon;
+}
+
+.carousel {
+  text-align: center;
+}
+
+.carousel-inner { 
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  height: 500px;
+  display: flex;
+  justify-content: center;
 }
 
 /* Fading animation */
