--- a/src/app/modules/elements/card/Card.component.html
+++ b/src/app/modules/elements/card/Card.component.html
@@ -2,14 +2,14 @@
   <div class="card">
     <!--image section-->
     <div class="imgBox">
-      <img src="././././assets/product2.jpg">
+      <img [src]="post.images[0]">
   
     </div>
     <!--product info section-->
     <div class="productInfo"> 
       <p> 
       <a href="https://www.quora.com/How-do-you-create-clickable-text">
-      Tiltle - Product - 
+      {{ post.title }}
     </a>
     </p>
     </div>
@@ -18,11 +18,11 @@
     <div class="userProfileInfo">
       <!--user profile picture section-->
     <div class="userProfileIcon">
-      <img src="././././assets/product1.jpg">
+      <img [src]="post.posterId.profile_image">
     </div>
     <!--user profile info section-->
-    <div class="userUserName" title="USER1111111111111111111111111111111111111111111">
-      <a href="https://www.codegrepper.com/code-examples/html/clickable+text+html"> USER1111111111111111111111111111111111111111111</a></div>
+    <div class="userUserName" [title]="post.posterId.user_name">
+      <a href="https://www.codegrepper.com/code-examples/html/clickable+text+html">{{post.posterId.user_name}}</a></div>
   </div>
   </div>
   
