fixed some hyperlinks

--- a/src/app/modules/elements/author_card/AuthorCard.component.html
+++ b/src/app/modules/elements/author_card/AuthorCard.component.html
@@ -4,7 +4,7 @@
   </div>
   <div class="line"><hr></div>
   <div class="authorInfo" >
-    <a href="#"> 
+    <a href="profile/authorName"> 
       <div class="authorImg">
         <img src="https://media.istockphoto.com/photos/3d-rendering-of-abstract-futuristic-blue-circuit-board-and-cpu-picture-id1294764355?s=612x612" > 
       </div>
