--- a/src/app/modules/elements/header/Header.component.html
+++ b/src/app/modules/elements/header/Header.component.html
@@ -1,12 +1,16 @@
 <div class="header">
   <div class="page">
-    <img id="logo" src="assets/icon.png">
+    <a href="/">
+      <img id="logo" src="assets/icon.png">
+    </a>
     <input class="buttonStyleBlack searchBar" type="text">
     <img id="magnifyGlassImg" src="assets/magnifyGlass.png">
 
     <button class="buttonStyleBlack searchButton" >Search</button>
-    <a href="url" class="linkStyleRed prodRevLink">Product Review</a>
-    <a href="url" class="linkStyleRed aboutUsLink">About Us</a>
-    <img id="userIcon" src="assets/icon.png">
+    <a href="newpost" class="linkStyleRed prodRevLink">Product Review</a>
+    <a href="about" class="linkStyleRed aboutUsLink">About Us</a>
+    <a href="/login">
+      <img id="userIcon" src="assets/icon.png">
+    </a>
   </div>
 </div>
