--- a/src/app/modules/elements/card/Card.component.html
+++ b/src/app/modules/elements/card/Card.component.html
@@ -2,13 +2,14 @@
   <div class="card">
     <!--image section-->
     <div class="imgBox">
-      <img src="././././assets/product2.jpg">
-  
+      <a href="post/123">
+        <img src="././././assets/product2.jpg">
+      </a>
     </div>
     <!--product info section-->
     <div class="productInfo"> 
       <p> 
-      <a href="https://www.quora.com/How-do-you-create-clickable-text">
+      <a href="post/123">
       Tiltle - Product - 
     </a>
     </p>
@@ -18,11 +19,13 @@
     <div class="userProfileInfo">
       <!--user profile picture section-->
     <div class="userProfileIcon">
-      <img src="././././assets/product1.jpg">
+      <a href="profile/123">
+        <img src="././././assets/product1.jpg">
+      </a>
     </div>
     <!--user profile info section-->
     <div class="userUserName" title="USER1111111111111111111111111111111111111111111">
-      <a href="https://www.codegrepper.com/code-examples/html/clickable+text+html"> USER1111111111111111111111111111111111111111111</a></div>
+      <a href="profile/123"> USER1111111111111111111111111111111111111111111</a></div>
   </div>
   </div>
   
