--- a/src/app/modules/elements/footer/Footer.component.html
+++ b/src/app/modules/elements/footer/Footer.component.html
@@ -2,10 +2,10 @@
   
     <nav id="nav-1">
       <img src="assets/amimaLogo.jpeg" alt="Amima" width="50" height="50" style="vertical-align: middle;" margin="10px" >
-      <a class="link-1" href="#">Home</a>
-      <a class="link-1" href="#">About</a>
+      <a class="link-1" href="/">Home</a>
+      <a class="link-1" href="about">About</a>
       <a class="link-1" href="#">Contact</a>
-      <a class="link-1" href="#">Product Review</a>
+      <a class="link-1" href="newpost">Product Review</a>
       <p style="color:#C0C0C0; height: 50%;">
         © 2022 Amima All Rights Reserved
       </p>
