partially implemented card screen

--- a/src/app/modules/elements/card/Card.component.html
+++ b/src/app/modules/elements/card/Card.component.html
@@ -21,8 +21,8 @@
       <img src="././././assets/product1.jpg">
     </div>
     <!--user profile info section-->
-    <div class="userUserName" title="USER1111111111111111111111111111111111111111111">
-      <a href="https://www.codegrepper.com/code-examples/html/clickable+text+html"> USER1111111111111111111111111111111111111111111</a></div>
+    <div class="userUserName" title="USER111">
+      <a href="https://www.codegrepper.com/code-examples/html/clickable+text+html"> USER111</a></div>
   </div>
   </div>
   
