--- a/src/app/modules/elements/card/Card.component.css
+++ b/src/app/modules/elements/card/Card.component.css
@@ -12,7 +12,8 @@
     width: 250px;
     height: 450px;
     background: white;
-    margin: 10px;
+    margin-bottom: 5px;
+    margin-right: -25px;
     border-radius: 15px;
 }
 
