--- a/src/app/modules/pages/login/Login.component.html
+++ b/src/app/modules/pages/login/Login.component.html
@@ -1,26 +1,13 @@
-<div id ="Login">
-  <div style="height: 50px"></div>
-  <img id ="logo" src ="assets/Logo.png">
-  <h4 id = "greetingText"> Welcome to the Amima Community</h4>
-
-  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans"/>
-  <div class="google-btn">
-    <div class="google-icon-wrapper">
-      <img class="google-icon" src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg"/>
-    </div>
-    <div style ="position: relative; left: -15px; top: 2px">
-      <p class="btn-text"><b>Sign in with google</b></p>
-    </div>
+<div class="login-container">
+  <img class="logo" src ="assets/Logo.png" alt="Amima Logo">
+  <h4 class="greeting">Welcome to the Amima Community</h4>
+  <div id="googleBtn"></div>
+  <div class="fb-login-button"
+       data-width=""
+       data-size="large"
+       data-button-type="login_with"
+       data-layout="default"
+       data-auto-logout-link="false"
+       data-use-continue-as="true">
   </div>
-
-  <link rel="stylesheet" type="text/css" />
-  <div class="facebook-btn" >
-    <div class="facebook-icon-wrapper">
-      <img class="facebook-icon" src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b8/2021_Facebook_icon.svg/300px-2021_Facebook_icon.svg.png"/>
-    </div>
-    <div style ="position: relative; left: -9px; top: 4px">
-      <p class="btn-text"><b>Sign in with facebook</b></p>
-    </div>
-  </div>
-
 </div>
