--- a/src/app/modules/elements/footer/Footer.component.css
+++ b/src/app/modules/elements/footer/Footer.component.css
@@ -1,17 +1,9 @@
-/*.footer {
-  position: fixed;
-  left: 0;
+.footer{
+  position: absolute;
   bottom: 0px;
   width: 100%;
-  height: 20%;
-  background-color: #f5f5f5;
-  color: black;
-  text-align: center;
-}*/
-@import url(https://fonts.googleapis.com/css?family=Raleway);
-body {
-  margin: 100px;
 }
+
 nav {
   margin-top: 430px;
   padding:  15px 15px 15px 0; /* nav bar */
@@ -19,12 +11,12 @@ nav {
   font-family: Raleway;
   box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.5);
 }
+
 #nav-1 {
   background: black;
 }
 
 .link-1 {
-  
   transition: 0.4s;
   color: #ffffff;
   font-size: 12px;
@@ -32,6 +24,7 @@ nav {
   padding: 0 10px; /* spacing between the names*/
   margin: 0 10px;
 }
+
 .link-1:hover {
   background-color: #ffffff;
   color: #6e1608;
@@ -39,11 +32,6 @@ nav {
   padding-left: 50px;
   padding: 10px 20px; /*chnges size of box animations*/
 }
-/*hr{
-  border-top: 1px solid #E0E0E0;
-}*/
-
-/*a:link { text-decoration: none; color: black;}*/
 
 nav img {
   margin-bottom: 20px;
