Fixed footer issue. Needed to adjust height of some pages

--- a/src/app/modules/elements/header/Header.component.css
+++ b/src/app/modules/elements/header/Header.component.css
@@ -1,7 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Raleway);
 
 .Header{
-  margin-bottom: 80px;
+  padding-top: 80px;
 }
 
 .masthead {
