--- a/src/app/modules/pages/404_page/NotFound.component.html
+++ b/src/app/modules/pages/404_page/NotFound.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="page">
   <h4 id ="oops"> Oops... The page you are looking for cannot be found</h4>
   <img id ="pic" src ="assets\404GIF.gif">
 </div>
