--- a/src/app/modules/elements/author_card/AuthorCard.component.css
+++ b/src/app/modules/elements/author_card/AuthorCard.component.css
@@ -1,14 +1,13 @@
 .authorCard{
-  border: solid grey;
+  border: solid rgba(134, 134, 134, 0.549);
   border-style: solid;
-  width:300px;
-  height: 120px;
-
+  width:auto;
+  object-fit: contain;
 }
 
 .author{
   color: black;
-  margin: 15px 10px 15px 10px;
+  margin: 5% 3% 5% 3%;
 }
 
 .line{
@@ -16,25 +15,82 @@
   background-color: grey;
 }
 
-
-.authorName{
-  padding-top: 5px;
-  color: black;
-  margin: 5px 10px 5px 10px;
-
+.authorInfo{
+  display: flex;
+  column-gap: 2%;
 }
 
+.authorName{
+  width: 70%;
+  padding-top: 1%;
+  color: black;
+  margin: 5% 3% 5% 3%;
+}
+
+.authorImg{
+  width: 30%;
+  float: left;
+  margin: 5% 3% 5% 3%;
+}
+img{ 
+  width: 85%;
+  height: 85%;
+  aspect-ratio: 1/1;
+  border-radius: 50%;
+
+}
 .authorInfo a {
   color: black;
   text-decoration: none;
-
 }
 
-img{ 
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  margin: 5px 10px 5px 10px;
-  float: left;
+@media (max-width: 768px){
+  .authorCard{
+    border: solid rgba(134, 134, 134, 0.549);
+    border-style: solid;
+  }
+  
+  .author{
+    display: none;
+    height: 0px;
+    width: 0px;
+  }
+  
+  .line{
+    height: 0px;
+    width: 0px;
+    visibility: hidden;
+    display: none;
+  }
+  
+  .authorInfo{
+    display: flex;
+    column-gap: 2%;
+  }
+  
+  .authorName{
+    width: 75%;
+    color: black;
+    /* margin: 5% 3% 5% 3%; */
+  }
+  
+  .authorImg{
+    width: 25%;
+    float: left;
+    margin-bottom: 0px;
+    /* margin: 5% 3% 5% 3%; */
+  }
+  img{ 
+    /* width: 70%;
+    height: 70%;
+    aspect-ratio: 1/1; */
+    border-radius: 50%;
+    margin-bottom: 0px;
+  
+  }
+  .authorInfo a {
+    color: black;
+    text-decoration: none;
+  }
   
 }
