--- a/src/app/modules/pages/404_page/NotFound.component.html
+++ b/src/app/modules/pages/404_page/NotFound.component.html
@@ -1,4 +1,7 @@
 <div>
-  <h4 id ="oops"> Oops... The page you are looking for cannot be found</h4>
-  <img id ="pic" src ="assets\404GIF.gif">
+  <h1 class ="oops"> Oops...</h1>
+  <h2 class ="desc">The page you are looking for cannot be found</h2>
+  <div class="ghost">
+    <img class ="pic" src ="assets\404GIF.gif">
+  </div>
 </div>
