fixed scaling on image carousel

--- a/src/app/modules/elements/image_carousel/ImageCarousel.component.css
+++ b/src/app/modules/elements/image_carousel/ImageCarousel.component.css
@@ -84,7 +84,7 @@
   margin-left: auto;
   margin-right: auto;
   width: 50%;
-  height: 500px;
+  height: 75vw;
   display: flex;
   justify-content: center;
 }
