Changed Product Review to Create Post

--- a/src/app/modules/elements/header/Header.component.html
+++ b/src/app/modules/elements/header/Header.component.html
@@ -19,7 +19,7 @@
 
         <ul class="navbar-nav ms-auto">
             <li class="nav-item ">
-                <a class="nav-link linkStyleRed" href="#">Product Review</a>
+                <a class="nav-link linkStyleRed" href="#">Create Post</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link linkStyleRed" href="#">About Us</a>
