--- a/src/app/modules/pages/about_us/AboutUs.component.css
+++ b/src/app/modules/pages/about_us/AboutUs.component.css
@@ -19,17 +19,17 @@
 
 .subTitle {
   color: black;
+  font-weight: bold;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 5vw;
   text-align: center;
-  transform: translate(0, -200%); 
+  
 }
 
 .description {
   color: black;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 2vw;
-  transform: translate(0, -100%); 
   padding-bottom: 5vw;
 }
 
