--- a/src/app/modules/pages/create_post/CreatePost.component.html
+++ b/src/app/modules/pages/create_post/CreatePost.component.html
@@ -10,7 +10,11 @@
   </div>
 
   <!--Space for image Hash Tags-->
-  <br><br><br><br>
+  <br><br>
+  <HashtagBar>
+
+  </HashtagBar>
+  <br><br>
   <!--Space for image Hash Tags-->
 
   <h3 class="reviewTitle">Your Review:</h3>
