--- a/src/app/modules/elements/hashtag_bar/HashtagBar.component.html
+++ b/src/app/modules/elements/hashtag_bar/HashtagBar.component.html
@@ -1,3 +1,8 @@
 <div class="HashtagBar">
-    <tag-input [(ngModel)]='items'></tag-input>
+    <tag-input  [(ngModel)]='items' 
+                theme='minimal'
+                (onRemove)="emitter()" 
+                (onTextChange)="emitter()" 
+                (onAdd)="emitter()">
+    </tag-input>
 </div>
