working on fixing the author card

--- a/src/app/modules/elements/author_card/AuthorCard.component.html
+++ b/src/app/modules/elements/author_card/AuthorCard.component.html
@@ -5,11 +5,12 @@
   <div class="line"><hr></div>
   <div class="authorInfo"> 
       <div class="authorImg">
-        <img src="https://media.istockphoto.com/photos/3d-rendering-of-abstract-futuristic-blue-circuit-board-and-cpu-picture-id1294764355?s=612x612" > 
+        <img src="../../../../assets/product2.jpg" > 
       </div>
       <div class="authorName">
-        <a href="profile/authorName"></a>
+        <a href="profile/authorName">
         <p>Author Name</p>
+        </a>
       </div>
   </div>
 
