--- a/src/app/modules/elements/author_card/AuthorCard.component.css
+++ b/src/app/modules/elements/author_card/AuthorCard.component.css
@@ -1,36 +1,36 @@
 .authorCard{
-  border: solid rgba(134, 134, 134, 0.549);
+  border: solid rgba(134, 134, 134, 0.472);
   border-style: solid;
   width:auto;
-  object-fit: contain;
+
 }
 
 .author{
   color: black;
-  margin: 5% 3% 5% 3%;
+  margin: 1% 3% 1% 3%;
 }
 
 .line{
-  margin: 0px 5% 0px 5%;
-  background-color: grey;
+  margin: 0px 3% 0px 3%;
+  background-color: rgba(128, 128, 128, 0.842);
 }
 
 .authorInfo{
   display: flex;
-  column-gap: 2%;
+  column-gap: 1%;
 }
 
 .authorName{
   width: 70%;
   padding-top: 1%;
   color: black;
-  margin: 5% 3% 5% 3%;
+  margin: 1% 3% 1% 3%;
 }
 
 .authorImg{
   width: 30%;
   float: left;
-  margin: 5% 3% 5% 3%;
+  margin: 1% 3% 1% 3%;
 }
 img{ 
   width: 85%;
@@ -46,7 +46,7 @@ img{
 
 @media (max-width: 768px){
   .authorCard{
-    border: solid rgba(134, 134, 134, 0.549);
+    border: solid rgba(134, 134, 134, 0.414);
     border-style: solid;
   }
   
@@ -59,31 +59,30 @@ img{
   .line{
     height: 0px;
     width: 0px;
-    visibility: hidden;
     display: none;
   }
   
   .authorInfo{
     display: flex;
-    column-gap: 2%;
+    column-gap: 0.5%;
   }
   
   .authorName{
-    width: 75%;
+    width: 80%;
     color: black;
-    /* margin: 5% 3% 5% 3%; */
+    margin: 2% 3% 2% 3%;
   }
   
   .authorImg{
-    width: 25%;
+    width: 20%;
     float: left;
     margin-bottom: 0px;
-    /* margin: 5% 3% 5% 3%; */
+    margin: 2% 3% 0% 3%;
   }
   img{ 
-    /* width: 70%;
-    height: 70%;
-    aspect-ratio: 1/1; */
+    width: 75%;
+    height: 75%;
+    aspect-ratio: 1/1;
     border-radius: 50%;
     margin-bottom: 0px;
   
