User info will now be displayed on the author card for every user

--- a/src/app/modules/elements/author_card/AuthorCard.component.html
+++ b/src/app/modules/elements/author_card/AuthorCard.component.html
@@ -1,6 +1,6 @@
 <div class="authorCard">
   <div class="author">
-    <p>Author </p>
+    <p>{{user.user_name}}</p>
   </div>
   <div class="line"><hr></div>
   <div class="authorInfo"> 
