Implemented cancel button in create post page

--- a/src/app/modules/pages/create_post/CreatePost.component.html
+++ b/src/app/modules/pages/create_post/CreatePost.component.html
@@ -22,6 +22,7 @@
       </ng-template>
       <br>
       <button class="postButton" (click)="createPost()">Post</button>
+      <button class="cancelButton" (click)="goToPostPage()">Cancel</button>
     </div>
   
   </div>
