--- a/src/app/modules/pages/profile_page/ProfilePage.component.html
+++ b/src/app/modules/pages/profile_page/ProfilePage.component.html
@@ -14,7 +14,7 @@
     <div class="buttons">
       <a href="/edit_profile/:id"><fa-icon [icon]="faPenToSquare" class="edit-button" title="Edit"></fa-icon>
       </a>
-      <a href=""><fa-icon [icon]="faArrowAltCircleRight" class="logout-button"  title="Log Out"></fa-icon>
+      <a href=""><fa-icon [icon]="faArrowAltCircleRight" (click)="deleteLoginCookie()" class="logout-button"  title="Log Out"></fa-icon>
       </a>
     </div>
   </div>
