Fix create post UI

--- a/src/app/modules/elements/hashtag_bar/HashtagBar.component.html
+++ b/src/app/modules/elements/hashtag_bar/HashtagBar.component.html
@@ -1,8 +1,8 @@
-<div class="HashtagBar">
-    <tag-input  [(ngModel)]='items' 
+<div>
+    <tag-input  [(ngModel)]='items'
                 theme='minimal'
-                (onRemove)="emitter()" 
-                (onTextChange)="emitter()" 
+                (onRemove)="emitter()"
+                (onTextChange)="emitter()"
                 (onAdd)="emitter()">
     </tag-input>
 </div>
