--- a/src/app/modules/pages/create_post/CreatePost.component.css
+++ b/src/app/modules/pages/create_post/CreatePost.component.css
@@ -6,11 +6,12 @@
 }
 
 .container{
-  float: left;
-  width: 55% ;
-  min-width: 350px;
-  padding-left: 11%;
   padding-bottom: 50px;
+}
+
+.sectionContainer {
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .revTitleTextBox{
@@ -24,11 +25,11 @@
 
 .revDescripTextBox{
   text-align: left;
-  padding-left: 10px; 
+  padding-left: 10px;
   width: 100%;
   border-style: solid;
   border-color: black;
-  border-radius: 15px;   
+  border-radius: 15px;
 }
 
 .reviewTitle{
