--- a/src/app/modules/pages/create_post/CreatePost.component.html
+++ b/src/app/modules/pages/create_post/CreatePost.component.html
@@ -1,29 +1,38 @@
 <div class="page">
   <div class="container">
-    <h1 class="pageTitle">Create Post</h1>
-
-    <ImageUploader (changeEvent)="updateImages($event)"></ImageUploader>
-
-    <div>
-      <input maxlength="25" class="revTitleTextBox"  placeholder="Your Title goes here..." [(ngModel)]="titleText" >
-    </div>
-
-    <HashtagBar (changeEvent)="updateKeywords($event)"></HashtagBar>
-
-    <h3 class="reviewTitle">Your Review:</h3>
-
-    <div class="reviewContainer">
-      <div>
-        <textarea class="revDescripTextBox" [(ngModel)]="inputText" maxlength="{{ txtLimit }}" rows="4" placeholder="Your review goes here..."></textarea>
+    <div class="row">
+      <div class="sectionContainer">
+        <h1>Create Post</h1>
       </div>
-      <div *ngIf="100 > txtLimit - inputText.length; then charLim"></div>
-      <ng-template #charLim class="charLabel">
-        <label>{{txtLimit - inputText.length}}/{{txtLimit}}</label>
-      </ng-template>
-      <br>
-      <button class="postButton" (click)="createPost()">Post</button>
-      <button class="cancelButton" (click)="goToPostPage()">Cancel</button>
+
+      <div class="sectionContainer">
+        Images:
+        <ImageUploader (changeEvent)="updateImages($event)"></ImageUploader>
+      </div>
+
+      <div class="sectionContainer col-12 col-sm-12 col-md-8 col-lg-6">
+        <input maxlength="25" class="revTitleTextBox" placeholder="Your Title goes here..." [(ngModel)]="titleText">
+      </div>
+
+      <div class="sectionContainer">
+        <span>Keywords (optional): </span>
+        <HashtagBar (changeEvent)="updateKeywords($event)"></HashtagBar>
+      </div>
+
+      <div class="sectionContainer">
+        <h3 class="reviewTitle">Your Review:</h3>
+        <div>
+          <textarea class="revDescripTextBox" [(ngModel)]="inputText" maxlength="{{ txtLimit }}" rows="4" placeholder="Your review goes here..."></textarea>
+        </div>
+        <div *ngIf="100 > txtLimit - inputText.length; then charLim"></div>
+        <ng-template #charLim class="charLabel">
+          <label>{{txtLimit - inputText.length}}/{{txtLimit}}</label>
+        </ng-template>
+        <br>
+        <button class="postButton" (click)="createPost()">Post</button>
+        <button class="cancelButton" (click)="goToPostPage()">Cancel</button>
+      </div>
+
     </div>
-  
   </div>
 </div>
