--- a/src/app/modules/elements/header/Header.component.html
+++ b/src/app/modules/elements/header/Header.component.html
@@ -2,7 +2,7 @@
   <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
     <div class="container">
 
-      <a class="navbar-brand" href="#"><img src="assets/icon.png" alt="Google logo" height="45px" width="45px"></a>
+      <a class="navbar-brand logo" (click)="goHome()"><img src="assets/icon.png" alt="Amima logo" height="45" width="45"></a>
 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -10,12 +10,12 @@
 
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="nav navbar-nav">
-          <li>  
+          <li>
             <input class="form-control buttonStyleBlack" type="search" >
           </li>
           <a class="btn btn-light action-button buttonStyleBlack searchBtn" role="button" href="#">Search</a>
         </ul>
-        
+
 
         <ul class="navbar-nav ms-auto">
             <li class="nav-item ">
@@ -34,7 +34,7 @@
           <a class="btn btn-light action-button linkStyleRed signIn" role="button" href="login">Sign In</a>
         </ng-template>
 
-        
+
       </div>
     </div>
   </nav>
