profile page fix

--- a/src/app/modules/pages/profile_page/ProfilePage.component.css
+++ b/src/app/modules/pages/profile_page/ProfilePage.component.css
@@ -56,7 +56,9 @@
   justify-content: center;
   column-gap: 10%;
   align-items: center;
+  font-size: 2.5rem; /* changes sizes of icons*/
 }
+
 a{
   text-decoration: none;
   color: black;
