--- a/src/app/modules/pages/profile_page/ProfilePage.component.html
+++ b/src/app/modules/pages/profile_page/ProfilePage.component.html
@@ -11,11 +11,11 @@
       </div>
       <div class="userBioInfo"> {{user.bio}}</div>  
     </div>
-    <div class="buttons">
-      <a href="/edit_profile/:id"><fa-icon [icon]="faPenToSquare" class="edit-button" title="Edit"></fa-icon>
-      </a>
-      <a href=""><fa-icon [icon]="faArrowAltCircleRight" (click)="deleteLoginCookie()" class="logout-button"  title="Log Out"></fa-icon>
-      </a>
+    <div *ngIf="checkLoggedIn()" class="buttons">
+          <a href="{'/edit_profile/' + user.id }"><fa-icon [icon]="faPenToSquare" class="edit-button" title="Edit" ></fa-icon>
+          </a>
+          <a href=""><fa-icon [icon]="faArrowAltCircleRight" (click)="deleteLoginCookie()" class="logout-button"  title="Log Out"></fa-icon>
+          </a>
     </div>
   </div>
 
