--- a/src/app/modules/pages/post_details/PostDetails.component.html
+++ b/src/app/modules/pages/post_details/PostDetails.component.html
@@ -21,7 +21,7 @@
   <div class="authorAndEdit">
     <div class="authorCard"> <AuthorCard></AuthorCard></div>
     <div class="tabs">
-      <button class="button1"  onclick="location.href='/newpost'">Edit</button>
+      <button class="button1" (click)="goToEdit()">Edit</button>
       <button class="button1" onclick="location.href='/newpost'"> Delete</button>
     </div>
   </div>
