--- a/src/app/modules/pages/about_us/AboutUs.component.css
+++ b/src/app/modules/pages/about_us/AboutUs.component.css
@@ -14,19 +14,25 @@
   transform: translate(0, -450%); 
   text-align: center; 
   width: 100%;
-} 
+}
 .subTitle {
   color: black;
   font-weight: bold;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 5vw;
   text-align: center;
+  padding-bottom: 5vw;
+}
+.descBox {
+  width: 80%;
+  padding-bottom: 5vw;
+  margin: auto; 
 }
 .description {
+  text-align: left;
   color: black;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 2vw;
-  padding-bottom: 5vw;
 }
 .bigContainer {
   display: grid;
@@ -37,7 +43,7 @@
 }
 .container1 {
   position: relative;
-  width: 20%;
+  width: 30vw;
   text-align: center;
 }
 .pic1 {
@@ -70,8 +76,10 @@
   opacity: 1;
 }
 .text1 {
+  width: 90%;
   color: white;
-  font-size: 25px;
+  text-align: left;
+  font-size: 2vw;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -80,7 +88,7 @@
 }
 .container2 {
   position: relative;
-  width: 20%;
+  width: 30vw;
   text-align: center;
 }
 .pic2 {
@@ -113,8 +121,10 @@
   opacity: 1;
 }
 .text2 {
+  width: 90%;
   color: white;
-  font-size: 25px;
+  text-align: left;
+  font-size: 2vw;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -123,7 +133,7 @@
 }
 .container3 {
   position: relative;
-  width: 20%;
+  width: 30vw;
   text-align: center;
 }
 .pic3 {
@@ -155,8 +165,10 @@
   opacity: 1;
 }
 .text3 {
+  width: 90%;
   color: white;
-  font-size: 25px;
+  text-align: left;
+  font-size: 2vw;
   position: absolute;
   top: 50%;
   left: 50%;
